--- a/src/Pages/login/Login.module.css
+++ b/src/Pages/login/Login.module.css
@@ -4,6 +4,13 @@
   padding: 20px;
 }
 
+.login-form h2 {
+  text-align: center;
+  font-size: 1.5em;
+  color: rgb(63, 60, 60);
+  filter: drop-shadow(8px 8px 4px rgb(119, 119, 56));
+}
+
 .login-form label {
   display: block;
   margin: 30px auto;
